# usbd-hid-device-example

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  flash.sh
.cargo/: config
src/: led.rs  main.rs  report.rs
