[package]
name = "usbd-hid-device-example"
authors = ["Alexey Galakhov <agalakhov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
lsm303dlhc = "0.2.0"
usb-device = "0.2.3"
usbd-hid-device = "0.1.0"
panic-semihosting = "0.5.3"
cortex-m = "0.6.1"
cortex-m-rt = {version = "0.6.11", features = [ "device" ] }
stm32f3 = { version = "0.9.0", features = [ "stm32f303", "rt" ] }
stm32f3xx-hal = { version = "0.4.0", features = [ "stm32f303xc", "rt", "stm32-usbd" ] }
stm32-usbd = { version = "0.5.0", features = ["ram_access_1x16"] }

[profile.release]
lto = "fat"
opt-level = "z"
codegen-units = 1
